Mon Feb 24 21:47:59 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* configure.in: Added AM_MAINTAINER_MODE

Fri Jan 31 04:36:42 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* init.scm: use use-modules instead of define-module to access slib.

Sat Jan 25 01:03:03 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* init.scm: load char-set.scm and rdelim.scm.
	* Makefile.am (subpkgdata_DATA): add char-set.scm and rdelim.scm.

	* rdelim.scm: new file from scsh.  Some procedures have been
 	implemented in libguile/ice-9 (based on the scsh interfaces), so
 	the versions here just modify them to use scsh char-sets and
 	multiple values.

	* rw.scm (generic-read-string!/partial, generic-read-string!,
	generic-write-string/partial, generic-write-string: adapt
	to change in uniform-array-read/write arguments.

	* network.scm (generic-receive-message!, 
	generic-receive-message!/partial): adapt to changes in recvfrom!
	primitive.

	* char-set.scm: new file from scsh.

Mon Jan 20 01:12:38 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* Makefile.am, Makefile.in, PLUGIN/OPT, README.PORT, configure.in,
	configure, aclocal.m4: new files.

	* network.scm (generic-receive-message!/partial): catch sytem-error
	and check for errno/wouldblock or errno/again.

Sat Jan 18 00:52:14 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* init.scm (index, rindex): replace versions in utilities.scm with
	primitives.
	load errno.scm.

	* rw.scm: globally replace :optional with optional.
	comment out y-or-n? and *y-or-n-eof-count*.
	(read-string!/partial, generic-read-string!/partial,
	generic-read-string!, read-string!, generic-write-string/partial,
	write-string/partial, generic-write-string, write-string):
	use guile primitives.

	* netconst.scm: undefine maybe-define and maybe-define-so after use.
	* errno.scm: new file.

Wed Jan  8 02:32:56 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* init.scm (ascii->char, char->ascii) defined.
