@@ -1,3 +1,9 @@
+Tue Mar 11 04:09:55 1997  Gary Houston  <ghouston@actrix.gen.nz>
+
+	* (let-opt.scm, utilities.scm): revert to scsh's versions, no longer
+	renaming :optional.
+	(rw.scm, network.scm): change optional back to :optional.
+
 Mon Feb 24 21:47:59 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
 
 	* configure.in: Added AM_MAINTAINER_MODE
